[package]
name = "secli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
dirs = "4.0.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
inquire = "0.2.1"
colored = "2.0.0"

[dependencies.clap]
version = "3.1.18"
features = ["cargo", "std", "color"]
default-features = false
