[package]
name = "secli"
description = "A simple CLI to store secrets locally and retrieve them via the CLI"
repository = "https://github.com/AnishDe12020/secli"
authors = ["Anish De <contact@anishde.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AnishDe12020/secli#readme"
keywords = ["secrets", "keys", "secret-management"]
categories = ["command-line-utilities", "command-line-interface"]
version = "1.0.0"
edition = "2021"

[[bin]]
name = "secli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
dirs = "4.0.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
inquire = "0.2.1"
colored = "2.0.0"

[dependencies.clap]
version = "3.1.18"
features = ["cargo", "std", "color"]
default-features = false
